# planck

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  planck.pc.in
debian/: changelog  control  rules
src/: code_gen.c  code_gen.h  codegen.c  codegen.h  error.c  error.h  errors.c  errors.h  exe.c  exe.h  expr.c  expr.h  lex.yy.c  main.c  multi_pass.c  multi_pass.h  object.c  object.h  planck.c  planck.h  planck_types.h  ported_lib.c  ported_lib.h  symtab.c  symtab.h  syntax.lex  syntax.yacc  types.h  typetab.c  typetab.h  utils.c  utils.h  virtual_machine.c  virtual_machine.h  vm.c  vm.h  y.tab.c  y.tab.h
syntax/: gen_syntax.sh  syntax.lex  syntax.yacc
unittest/framework/: Sample.c_sample  SampleTest.c_sample  SampleTestAuto.c_sample  TestMain.c  TestMain.h
unittest/sample_testcases/: error_test.c  variable_test.c
unittest/test_cases/: 00_white_box_test.c  01_four_op_test.c  02_bit_op_test.c  03_comp_op_test.c  04_variable_test.c  05_condition_stmt_test.c  06_while_test.c  07_array_test.c
unittest/testcases/: basic_op_test.c  error_test.c  struct_test.c  variable_test.c
unittest/tests/: vm_test.c
util/slackbot/: planck_module.c  planckbot.py  setup.py
